# serializer version: 1
# name: test_missing_dep_in_plan_and_flag_continues[package][package]
  tuple(
    tuple(
      'cargo %s for crate %s could not resolve sibling dependency %s from crates.io; continuing because the unpublished workspace dependency override is enabled',
      tuple(
        'package',
        'beta',
        'alpha',
      ),
    ),
  )
# ---
# name: test_missing_dep_in_plan_and_flag_continues[publish][publish]
  tuple(
    tuple(
      'cargo %s for crate %s could not resolve sibling dependency %s from crates.io; continuing because the unpublished workspace dependency override is enabled',
      tuple(
        'publish',
        'beta',
        'alpha',
      ),
    ),
  )
# ---
